# unimdgen

./: .gitignore  README.md  config.py  data_gen.py  main.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: workflow.yml
cli/: cli.py  self_validation.py
config/: constants.py  paths.py  prompts.py
logs/: log_manager.py  tokens.txt
output/: MTH1004 Linear Algebra.md  Modules.md
output/.obsidian/: workspace.json
output/MTH1003 Ideas of Mathematical Proof/: MTH1003 Ideas of Mathematical Proof.md
output/MTH1004 Linear Algebra/: MTH1004 Linear Algebra.md
output/MTH1005 Probability and Statistics/: MTH1005 Probability and Statistics.md
output/classes/: MTH1004 Linear Algebra Practical Class 1.md  MTH1004 Linear Algebra Practical Class 2.md  MTH1004 Linear Algebra Practical Class 3.md  MTH1004 Linear Algebra Practical Class 4.md  MTH1004 Linear Algebra Practical Class 5.md  MTH1004 Linear Algebra Practical Class 6.md  MTH1004 Linear Algebra Practical Class 7.md  MTH1004 Linear Algebra Practical Class 8.md  MTH1004 Linear Algebra Tutorial Class 1.md  MTH1004 Linear Algebra Tutorial Class 2.md  MTH1004 Linear Algebra Tutorial Class 3.md  MTH1004 Linear Algebra Tutorial Class 4.md  MTH1004 Linear Algebra Tutorial Class 5.md  MTH1004 Linear Algebra Tutorial Class 6.md
output/notes/: Angle between Vectors.md  Basis Vectors.md  Change of Basis Matrix.md  Dot Product.md  Eigenspaces.md  Eigenvalue Equation.md  Gaussian Elimination.md  Inverse Matrix.md  Linear Maps.md  Magnitude and Direction.md  Matrix Addition and Subtraction.md  Matrix Form.md  Matrix Multiplication.md  Orthogonal Bases.md  Properties of Orthogonal Matrices.md  Quadratic Forms.md  Rank of a Matrix.md  Space Dimension.md  Systems of Equations.md  (+4 more)
src/: main.py
templates/: class_template.md  module_flashcards.md  module_practice_tests.md  module_question_based_revision.md  module_summary_notes.md  module_summary_questions.md  module_template.md  note_template.md
(+153 files in other folders)
